[package]
name = "piex-nodetree"
version = "0.1.0"
edition = "2021"

[dependencies]
indextree = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows-registry = "0.3.0"
windows-result = "0.2.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "decode_utf16_lossy_bench"
harness = false
